telemetry/base/otel-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-lb
  namespace: observability
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: otel-collector
    app.kubernetes.io/name: opentelemetry-collector
    component: standalone-collector
  ports:
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
